[B]2.2.5[/B]
- Poprawka: miniaturki aktorów
- Poprawka: pobieranie studia z filmweb
- Poprawka: pobieranie trailerów
[B]2.2.4[/B]
- Poprawka: pobieranie tagline
[B]2.2.3[/B]
- Poprawka: pobieranie obsady
[B]2.2.2[/B]
- Poprawka: pobieranie opisu
[B]2.2.1[/B]
- Poprawka: kodowanie znaków w tagline
[B]2.2.0[/B]
- Poprawka: Wyniki wyszukiwania, Filmweb ID, Tytuł, Oryginalny Tytuł, Rok, Tagline, Outline, Akorzy, Trailer, Opisy, Fanart
- Dodano: Trailer z TMDb jeśli nie ma na filmweb
- Dodano: Obsada z TMDb jesśłi nie ma na filmweb
[B]2.1.7[/B]
- poprawka: okładka
[B]2.1.6[/B]
- poprawka: pobieranie filmweb id
[B]2.1.5[/B]
- poprawka: pobieranie okładki
[B]2.1.4[/B]
- ulepszenie: powiązanie filmweb.id z tmdb.id
[B]2.1.3[/B]
- powrót: wyszukiwarka web 
[B]2.1.2[/B]
- test: wyszukiwarka live
[B]2.1.1[/B]
- poprawka: wyszukiwarka, studio, opis 
[B]2.1.0[/B]
- optymalizacja - scraper oparty tylko na filmweb.pl i themoviedb.org 
[B]2.0.0[/B]
- całkowicie przepisany i zmodyfikowany scraper 
[B]1.2.1[/B]
- poprawka: ocena z imdb poprzez współdzielone funkcje
[B]1.2.0[/B]
- poprawka: imdb ID z literkami tt
[B]1.1.1[/B]
- dodana obsługa IMDB z pliku .nfo
[B]1.1.0[/B]
- Nowy portal, nowy scraper
[B]1.0.0[/B]
- Initial import into addons repository