@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.filmweb.pl"
         name="Filmweb"
-        version="2.2.5"
-        provider-name="Regss|smuto">
+        version="2.2.6"
+        provider-name="Regss,smuto">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
         <import addon="metadata.common.themoviedb.org" version="2.8.0"/>
@@ -17,6 +17,7 @@
         <description lang="en">Download Movie information from www.filmweb.pl</description>
         <description lang="pl">Pobiera informacje o filmie ze strony www.filmweb.pl</description>
         <platform>all</platform>
+        <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
         <forum>http://kodi.org.pl/forum/10-XBMC---Wtyczki-pluginy/3565-filmweb-pl-scraper</forum>
         <email>regss84@gmail.com</email>
         <source>https://github.com/Regss/metadata.filmweb.pl</source>
