@@ -1,3 +1,6 @@
+[B]2.2.6[/B]
+- Poprawka: zmiany w addon.xml
+
 [B]2.2.5[/B]
 - Poprawka: miniaturki aktorów
 - Poprawka: pobieranie studia z filmweb
